force-app/main/default/objects/Play_Mode_Config__c/fields/Case_record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_record_Type__c</fullName>
    <label>Case Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>