force-app/main/default/objects/Play_Mode_Config__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>