force-app/main/default/objects/Play_Mode_Config__c/fields/Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>