force-app/main/default/objects/Play_Mode_Config__c/fields/Play_Mode_Class__c.field-meta.xml
<CustomField>
    <fullName>Play_Mode_Class__c</fullName>
    <label>Play Mode Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>