force-app/main/default/objects/Play_Mode_Config__c/fields/Sorted_by_Field__c.field-meta.xml
<CustomField>
    <fullName>Sorted_by_Field__c</fullName>
    <label>Sorted By Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>