force-app/main/default/objects/Play_Mode_Config__c/fields/Status_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Status_Exceptions__c</fullName>
    <label>Status Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>